--- a/vue/index.html
+++ b/vue/index.html
@@ -14,5 +14,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- for Cloudinary-->
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   </body>
 </html>
