--- a/vue/index.html
+++ b/vue/index.html
@@ -15,6 +15,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <!-- for Cloudinary-->
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   </body>
 </html>
